--- a/pages/scenes.html
+++ b/pages/scenes.html
@@ -23,45 +23,58 @@
 
   <main>
     <section class="gallery">
-      <img src="../assets/images/scenes/000017070025.jpg" alt="Scene photo 1">
-      <img src="../assets/images/scenes/000017210019.jpg" alt="Scene photo 2">
-      <img src="../assets/images/scenes/000094770008.jpg" alt="Scene photo 3">
-      <img src="../assets/images/scenes/000094820015.jpg" alt="Scene photo 4">
-      <img src="../assets/images/scenes/000094820019.jpg" alt="Scene photo 5">
-      <img src="../assets/images/scenes/IMG_0481.JPG" alt="Scene photo 6">
-      <img src="../assets/images/scenes/IMG_0498.JPG" alt="Scene photo 7">
-      <img src="../assets/images/scenes/IMG_0538.JPG" alt="Scene photo 8">
-      <img src="../assets/images/scenes/IMG_0558.JPG" alt="Scene photo 9">
-      <img src="../assets/images/scenes/IMG_0638.JPG" alt="Scene photo 10">
-      <img src="../assets/images/scenes/IMG_1184.JPG" alt="Scene photo 11">
-      <img src="../assets/images/scenes/IMG_2240.JPG" alt="Scene photo 12">
-      <img src="../assets/images/scenes/IMG_3397.JPG" alt="Scene photo 13">
-      <img src="../assets/images/scenes/IMG_3406.JPG" alt="Scene photo 14">
-      <img src="../assets/images/scenes/IMG_3411.JPG" alt="Scene photo 15">
-      <img src="../assets/images/scenes/IMG_3417.JPG" alt="Scene photo 16">
-      <img src="../assets/images/scenes/IMG_3420.JPG" alt="Scene photo 17">
-      <img src="../assets/images/scenes/IMG_3428.JPG" alt="Scene photo 18">
-      <img src="../assets/images/scenes/IMG_3430.JPG" alt="Scene photo 19">
-      <img src="../assets/images/scenes/IMG_3440.JPG" alt="Scene photo 20">
-      <img src="../assets/images/scenes/IMG_3445.JPG" alt="Scene photo 21">
-      <img src="../assets/images/scenes/IMG_3447.JPG" alt="Scene photo 22">
-      <img src="../assets/images/scenes/IMG_3452.JPG" alt="Scene photo 23">
-      <img src="../assets/images/scenes/IMG_3454.JPG" alt="Scene photo 24">
-      <img src="../assets/images/scenes/IMG_3455.JPG" alt="Scene photo 25">
-      <img src="../assets/images/scenes/IMG_3461 Copy.JPG" alt="Scene photo 26">
-      <img src="../assets/images/scenes/IMG_3472.JPG" alt="Scene photo 27">
-      <img src="../assets/images/scenes/IMG_3474.JPG" alt="Scene photo 28">
-      <img src="../assets/images/scenes/IMG_3484.JPG" alt="Scene photo 29">
-      <img src="../assets/images/scenes/IMG_3498.JPG" alt="Scene photo 30">
-      <img src="../assets/images/scenes/IMG_3506.JPG" alt="Scene photo 31">
-      <img src="../assets/images/scenes/IMG_3525.JPG" alt="Scene photo 32">
-      <img src="../assets/images/scenes/IMG_3528.JPG" alt="Scene photo 33">
-      <img src="../assets/images/scenes/IMG_3545.JPG" alt="Scene photo 34">
-      <img src="../assets/images/scenes/IMG_3547.JPG" alt="Scene photo 35">
-      <img src="../assets/images/scenes/IMG_3569.JPG" alt="Scene photo 36">
-      <img src="../assets/images/scenes/IMG_3588.JPG" alt="Scene photo 37">
-      <img src="../assets/images/scenes/IMG_3595.JPG" alt="Scene photo 38">
-      <img src="../assets/images/scenes/IMG_8634.JPG" alt="Scene photo 39">
+      <img src="../assets/images/scenes/000017070025.jpg" alt="Scene photo 1" loading="lazy">
+      <img src="../assets/images/scenes/000017210019.jpg" alt="Scene photo 2" loading="lazy">
+      <img src="../assets/images/scenes/000094770008.jpg" alt="Scene photo 3" loading="lazy">
+      <img src="../assets/images/scenes/000094820015.jpg" alt="Scene photo 4" loading="lazy">
+      <img src="../assets/images/scenes/000094820019.jpg" alt="Scene photo 5" loading="lazy">
+      <img src="../assets/images/scenes/IMG_0481.JPG" alt="Scene photo 6" loading="lazy">
+      <img src="../assets/images/scenes/IMG_0498.JPG" alt="Scene photo 7" loading="lazy">
+      <img src="../assets/images/scenes/IMG_0538.JPG" alt="Scene photo 8" loading="lazy">
+      <img src="../assets/images/scenes/IMG_0558.JPG" alt="Scene photo 9" loading="lazy">
+      <img src="../assets/images/scenes/IMG_0638.JPG" alt="Scene photo 10" loading="lazy">
+      <img src="../assets/images/scenes/IMG_1184.JPG" alt="Scene photo 11" loading="lazy">
+      <img src="../assets/images/scenes/IMG_2240.JPG" alt="Scene photo 12" loading="lazy">
+      <img src="../assets/images/scenes/IMG_3397.JPG" alt="Scene photo 13" loading="lazy">
+      <img src="../assets/images/scenes/IMG_3406.JPG" alt="Scene photo 14" loading="lazy">
+      <img src="../assets/images/scenes/IMG_3411.JPG" alt="Scene photo 15" loading="lazy">
+      <img src="../assets/images/scenes/IMG_3417.JPG" alt="Scene photo 16" loading="lazy">
+      <img src="../assets/images/scenes/IMG_3420.JPG" alt="Scene photo 17" loading="lazy">
+      <img src="../assets/images/scenes/IMG_3428.JPG" alt="Scene photo 18" loading="lazy">
+      <img src="../assets/images/scenes/IMG_3430.JPG" alt="Scene photo 19" loading="lazy">
+      <img src="../assets/images/scenes/IMG_3440.JPG" alt="Scene photo 20" loading="lazy">
+      <img src="../assets/images/scenes/IMG_3445.JPG" alt="Scene photo 21" loading="lazy">
+      <img src="../assets/images/scenes/IMG_3447.JPG" alt="Scene photo 22" loading="lazy">
+      <img src="../assets/images/scenes/IMG_3452.JPG" alt="Scene photo 23" loading="lazy">
+      <img src="../assets/images/scenes/IMG_3454.JPG" alt="Scene photo 24" loading="lazy">
+      <img src="../assets/images/scenes/IMG_3455.JPG" alt="Scene photo 25" loading="lazy">
+      <img src="../assets/images/scenes/IMG_3461 Copy.JPG" alt="Scene photo 26" loading="lazy">
+      <img src="../assets/images/scenes/IMG_3472.JPG" alt="Scene photo 27" loading="lazy">
+      <img src="../assets/images/scenes/IMG_3474.JPG" alt="Scene photo 28" loading="lazy">
+      <img src="../assets/images/scenes/IMG_3484.JPG" alt="Scene photo 29" loading="lazy">
+      <img src="../assets/images/scenes/IMG_3498.JPG" alt="Scene photo 30" loading="lazy">
+      <img src="../assets/images/scenes/IMG_3506.JPG" alt="Scene photo 31" loading="lazy">
+      <img src="../assets/images/scenes/IMG_3525.JPG" alt="Scene photo 32" loading="lazy">
+      <img src="../assets/images/scenes/IMG_3528.JPG" alt="Scene photo 33" loading="lazy">
+      <img src="../assets/images/scenes/IMG_3545.JPG" alt="Scene photo 34" loading="lazy">
+      <img src="../assets/images/scenes/IMG_3547.JPG" alt="Scene photo 35" loading="lazy">
+      <img src="../assets/images/scenes/IMG_3569.JPG" alt="Scene photo 36" loading="lazy">
+      <img src="../assets/images/scenes/IMG_3588.JPG" alt="Scene photo 37" loading="lazy">
+      <img src="../assets/images/scenes/IMG_3595.JPG" alt="Scene photo 38" loading="lazy">
+      <img src="../assets/images/scenes/IMG_8634.JPG" alt="Scene photo 39" loading="lazy">
+            <img src="../assets/images/scenes/IMG_3949.JPG" alt="Scene photo 40" loading="lazy">
+      <img src="../assets/images/scenes/IMG_3980.JPG" alt="Scene photo 41" loading="lazy">
+      <img src="../assets/images/scenes/IMG_3991.JPG" alt="Scene photo 42" loading="lazy">
+      <img src="../assets/images/scenes/IMG_4499.JPG" alt="Scene photo 43" loading="lazy">
+      <img src="../assets/images/scenes/IMG_4584.JPG" alt="Scene photo 44" loading="lazy">
+      <img src="../assets/images/scenes/IMG_4637.JPG" alt="Scene photo 45" loading="lazy">
+      <img src="../assets/images/scenes/IMG_4716.JPG" alt="Scene photo 46" loading="lazy">
+      <img src="../assets/images/scenes/IMG_4717.JPG" alt="Scene photo 47" loading="lazy">
+      <img src="../assets/images/scenes/IMG_4755.JPG" alt="Scene photo 48" loading="lazy">
+      <img src="../assets/images/scenes/IMG_4806.JPG" alt="Scene photo 49" loading="lazy">
+      <img src="../assets/images/scenes/IMG_4812.JPG" alt="Scene photo 50" loading="lazy">
+      <img src="../assets/images/scenes/IMG_8242 Copy.JPG" alt="Scene photo 51" loading="lazy">
+
     </section>
   </main>
 
