update blha blah blah

--- a/pages/scenes.html
+++ b/pages/scenes.html
@@ -73,7 +73,7 @@
       <img src="../assets/images/scenes/IMG_4755.JPG" alt="Scene photo 48" loading="lazy">
       <img src="../assets/images/scenes/IMG_4806.JPG" alt="Scene photo 49" loading="lazy">
       <img src="../assets/images/scenes/IMG_4812.JPG" alt="Scene photo 50" loading="lazy">
-      <img src="../assets/images/scenes/IMG_8242 Copy.JPG" alt="Scene photo 51" loading="lazy">
+      <img src="../assets/images/scenes/IMG_8242 .JPG" alt="Scene photo 51" loading="lazy">
 
     </section>
   </main>
