--- a/pages/vertical.html
+++ b/pages/vertical.html
@@ -23,30 +23,34 @@
 
   <main>
     <section class="gallery">
-      <img src="../assets/images/vertical/000094770003.jpg" alt="Vertical photo 1">
-      <img src="../assets/images/vertical/000094770006.jpg" alt="Vertical photo 2">
-      <img src="../assets/images/vertical/IMG_0529.jpg" alt="Vertical photo 3">
-      <img src="../assets/images/vertical/IMG_0616.jpg" alt="Vertical photo 4">
-      <img src="../assets/images/vertical/IMG_0620.jpg" alt="Vertical photo 5">
-      <img src="../assets/images/vertical/IMG_0622.jpg" alt="Vertical photo 6">
-      <img src="../assets/images/vertical/IMG_0830.JPG" alt="Vertical photo 7">
-      <img src="../assets/images/vertical/IMG_1161.JPG" alt="Vertical photo 8">
-      <img src="../assets/images/vertical/IMG_1172.JPG" alt="Vertical photo 9">
-      <img src="../assets/images/vertical/IMG_2495.jpg" alt="Vertical photo 10">
-      <img src="../assets/images/vertical/IMG_2559.JPG" alt="Vertical photo 11">
-      <img src="../assets/images/vertical/IMG_2575.jpg" alt="Vertical photo 12">
-      <img src="../assets/images/vertical/IMG_2627.jpg" alt="Vertical photo 13">
-      <img src="../assets/images/vertical/IMG_2628.jpg" alt="Vertical photo 14">
-      <img src="../assets/images/vertical/IMG_3579.jpg" alt="Vertical photo 15">
-      <img src="../assets/images/vertical/IMG_3598.jpg" alt="Vertical photo 16">
-      <img src="../assets/images/vertical/IMG_3685.jpg" alt="Vertical photo 17">
-      <img src="../assets/images/vertical/IMG_5758.JPG" alt="Vertical photo 18">
-      <img src="../assets/images/vertical/IMG_5799.JPG" alt="Vertical photo 19">
-      <img src="../assets/images/vertical/IMG_5824.JPG" alt="Vertical photo 20">
-      <img src="../assets/images/vertical/IMG_5966.JPG" alt="Vertical photo 21">
-      <img src="../assets/images/vertical/IMG_7945 Copy.JPG" alt="Vertical photo 22">
-      <img src="../assets/images/vertical/IMG_0639.jpg" alt="Vertical photo 23">
-      <img src="../assets/images/vertical/IMG_7326.JPG" alt="Vertical photo 24">
+      <img src="../assets/images/vertical/000094770003.jpg" alt="Vertical photo 1" loading="lazy">
+      <img src="../assets/images/vertical/000094770006.jpg" alt="Vertical photo 2" loading="lazy">
+      <img src="../assets/images/vertical/IMG_0529.jpg" alt="Vertical photo 3" loading="lazy">
+      <img src="../assets/images/vertical/IMG_0616.jpg" alt="Vertical photo 4" loading="lazy">
+      <img src="../assets/images/vertical/IMG_0620.jpg" alt="Vertical photo 5" loading="lazy">
+      <img src="../assets/images/vertical/IMG_0622.jpg" alt="Vertical photo 6" loading="lazy">
+      <img src="../assets/images/vertical/IMG_0830.JPG" alt="Vertical photo 7" loading="lazy">
+      <img src="../assets/images/vertical/IMG_1161.JPG" alt="Vertical photo 8" loading="lazy">
+      <img src="../assets/images/vertical/IMG_1172.JPG" alt="Vertical photo 9" loading="lazy">
+      <img src="../assets/images/vertical/IMG_2495.jpg" alt="Vertical photo 10" loading="lazy">
+      <img src="../assets/images/vertical/IMG_2559.JPG" alt="Vertical photo 11" loading="lazy">
+      <img src="../assets/images/vertical/IMG_2575.jpg" alt="Vertical photo 12" loading="lazy">
+      <img src="../assets/images/vertical/IMG_2627.jpg" alt="Vertical photo 13" loading="lazy">
+      <img src="../assets/images/vertical/IMG_2628.jpg" alt="Vertical photo 14" loading="lazy">
+      <img src="../assets/images/vertical/IMG_3579.jpg" alt="Vertical photo 15" loading="lazy">
+      <img src="../assets/images/vertical/IMG_3598.jpg" alt="Vertical photo 16" loading="lazy">
+      <img src="../assets/images/vertical/IMG_3685.jpg" alt="Vertical photo 17" loading="lazy">
+      <img src="../assets/images/vertical/IMG_5758.JPG" alt="Vertical photo 18" loading="lazy">
+      <img src="../assets/images/vertical/IMG_5799.JPG" alt="Vertical photo 19" loading="lazy">
+      <img src="../assets/images/vertical/IMG_5824.JPG" alt="Vertical photo 20" loading="lazy">
+      <img src="../assets/images/vertical/IMG_5966.JPG" alt="Vertical photo 21" loading="lazy">
+      <img src="../assets/images/vertical/IMG_7945 Copy.JPG" alt="Vertical photo 22" loading="lazy">
+      <img src="../assets/images/vertical/IMG_0639.jpg" alt="Vertical photo 23" loading="lazy">
+      <img src="../assets/images/vertical/IMG_7326.JPG" alt="Vertical photo 24" loading="lazy">
+      <img src="../assets/images/vertical/IMG_4703.jpg" alt="Vertical photo 25" loading="lazy">
+      <img src="../assets/images/vertical/IMG_4704.jpg" alt="Vertical photo 26" loading="lazy">
+      <img src="../assets/images/vertical/IMG_4780.jpg" alt="Vertical photo 27" loading="lazy">
+      <img src="../assets/images/vertical/IMG_4802.jpg" alt="Vertical photo 28" loading="lazy">
     </section>
   </main>
 
