--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
       <img src="assets/images/featured/img_8634.JPG" alt="Swingset on beach">
       <img src="assets/images/featured/000094820015.jpg" alt="Canon Beach Birds">
       <img src="assets/images/featured/img_2642.jpg" alt="Portrait of man in black and white">
-      <img src="assets/images/featured/img_2645.jpg" alt="Two figures by lighthouse">
-      <img src="assets/images/featured/img_3420.jpg" alt="Mountain reflection on lake">
+      <img src="assets/images/featured/IMG_8242.jpg" alt="crossing foot paths">
+      <img src="assets/images/featured/IMG_4713.JPG" alt="Girl with Umbrella">
       <img src="assets/images/featured/img_3461.jpg" alt="Bison in open plain">
     </section>
   </main>
