--- a/pages/scenes.html
+++ b/pages/scenes.html
@@ -81,7 +81,7 @@
   <footer>
     <p>© 2025 Sawyer Knox</p>
   </footer>
-  <script src="../lightbox.js" defer></script>
+  <script src="../Lightbox.js" defer></script>
 
 </body>
 </html>
