--- a/pages/street.html
+++ b/pages/street.html
@@ -107,7 +107,7 @@
   <footer>
     <p>© 2025 Sawyer Knox</p>
   </footer>
-  <script src="../lightbox.js" defer></script>
+  <script src="../Lightbox.js" defer></script>
 
 </body>
 </html>
