--- a/pages/vertical.html
+++ b/pages/vertical.html
@@ -57,7 +57,7 @@
   <footer>
     <p>© 2025 Sawyer Knox</p>
   </footer>
-  <script src="../lightbox.js" defer></script>
+  <script src="../Lightbox.js" defer></script>
 
 </body>
 </html>
