photo captions color

--- a/pages/color.html
+++ b/pages/color.html
@@ -23,39 +23,39 @@
 
   <main>
     <section class="gallery">
-      <img src="../assets/images/color/3DDEC44C-DD7E-43EC-ABDB-E6C5A45956D7.jpg" alt="Color photo 1">
-      <img src="../assets/images/color/426029F6-4B94-4C9D-BBB5-419367B043D3.jpg" alt="Color photo 2">
-      <img src="../assets/images/color/000057420015.jpg" alt="Color photo 3">
-      <img src="../assets/images/color/IMG_0716.JPG" alt="Color photo 4">
-      <img src="../assets/images/color/IMG_0745.JPG" alt="Color photo 5">
-      <img src="../assets/images/color/IMG_0784.JPG" alt="Color photo 6">
-      <img src="../assets/images/color/IMG_0802.JPG" alt="Color photo 7">
-      <img src="../assets/images/color/IMG_0849.JPG" alt="Color photo 8">
-      <img src="../assets/images/color/IMG_0851.JPG" alt="Color photo 9">
-      <img src="../assets/images/color/IMG_0922.JPG" alt="Color photo 10">
-      <img src="../assets/images/color/IMG_0928.JPG" alt="Color photo 11">
-      <img src="../assets/images/color/IMG_1941.JPG" alt="Color photo 12">
-      <img src="../assets/images/color/IMG_1945.JPG" alt="Color photo 13">
-      <img src="../assets/images/color/IMG_1953.JPG" alt="Color photo 14">
-      <img src="../assets/images/color/IMG_2244.JPG" alt="Color photo 15">
-      <img src="../assets/images/color/IMG_2251.JPG" alt="Color photo 16">
-      <img src="../assets/images/color/IMG_2252.JPG" alt="Color photo 17">
-      <img src="../assets/images/color/IMG_2363.JPG" alt="Color photo 18">
-      <img src="../assets/images/color/IMG_4135.JPG" alt="Color photo 19">
-      <img src="../assets/images/color/IMG_5762.JPG" alt="Color photo 20">
-      <img src="../assets/images/color/IMG_5774.JPG" alt="Color photo 21">
-      <img src="../assets/images/color/IMG_5805.JPG" alt="Color photo 22">
-      <img src="../assets/images/color/IMG_5822.JPG" alt="Color photo 23">
-      <img src="../assets/images/color/IMG_5951.JPG" alt="Color photo 24">
-      <img src="../assets/images/color/IMG_6050.JPG" alt="Color photo 25">
-      <img src="../assets/images/color/IMG_6055.JPG" alt="Color photo 26">
-      <img src="../assets/images/color/IMG_6068.JPG" alt="Color photo 27">
-      <img src="../assets/images/color/IMG_7836.JPG" alt="Color photo 28">
-      <img src="../assets/images/color/IMG_7847.JPG" alt="Color photo 29">
-      <img src="../assets/images/color/IMG_8035.JPG" alt="Color photo 30">
-      <img src="../assets/images/color/IMG_8064.JPG" alt="Color photo 31">
-      <img src="../assets/images/color/IMG_8297.JPG" alt="Color photo 32">
-      <img src="../assets/images/color/IMG_8147.JPG" alt="Color photo 33">
+      <img src="../assets/images/color/3DDEC44C-DD7E-43EC-ABDB-E6C5A45956D7.jpg" alt="Amarillo, Texas - Summer 2024">
+      <img src="../assets/images/color/426029F6-4B94-4C9D-BBB5-419367B043D3.jpg" alt="Somewhere in Utah - Summer 2024">
+      <img src="../assets/images/color/000057420015.jpg" alt="North side of Maui, Hawaii - Jan 2025 ">
+      <img src="../assets/images/color/IMG_0716.JPG" alt="Clatskanie, Oregon - Summer 2023">
+      <img src="../assets/images/color/IMG_0745.JPG" alt="Clatskanie, Oregon - Summer 2023">
+      <img src="../assets/images/color/IMG_0784.JPG" alt="Jaipur, India - Spring 2023">
+      <img src="../assets/images/color/IMG_0802.JPG" alt="Jaipur, India - Spring 2023">
+      <img src="../assets/images/color/IMG_0849.JPG" alt="Jaipur, India - Spring 2023">
+      <img src="../assets/images/color/IMG_0851.JPG" alt="Agra, India - Spring 2023">
+      <img src="../assets/images/color/IMG_0922.JPG" alt="Chicago, Illinois - Summer 2023">
+      <img src="../assets/images/color/IMG_0928.JPG" alt="Chicago, Illinois - Summer 2023">
+      <img src="../assets/images/color/IMG_1941.JPG" alt="Mt. Ranier National Park, Washington - Summer 2021">
+      <img src="../assets/images/color/IMG_1945.JPG" alt="Seaside, Oregon - Fall 2023">
+      <img src="../assets/images/color/IMG_1953.JPG" alt="Seattle, Washington - Summer 2021">
+      <img src="../assets/images/color/IMG_2244.JPG" alt="Seaside, Oregon - Fall 2023">
+      <img src="../assets/images/color/IMG_2251.JPG" alt="Portland, Oregon - Summer 2025">
+      <img src="../assets/images/color/IMG_2252.JPG" alt="Boxley Valley, Arkansas - Fall 2023">
+      <img src="../assets/images/color/IMG_2363.JPG" alt="China Town, San Francisco, California - Summer 2021">
+      <img src="../assets/images/color/IMG_4135.JPG" alt="Portland, Maine - Spring - 2022">
+      <img src="../assets/images/color/IMG_5762.JPG" alt="Rio de Janeiro, Brazil - Summer 2024">
+      <img src="../assets/images/color/IMG_5774.JPG" alt="Cusco, Peru - Summer 2024">
+      <img src="../assets/images/color/IMG_5805.JPG" alt="Machu Picchu, Peru - Summer 2024">
+      <img src="../assets/images/color/IMG_5822.JPG" alt="Machu Picchu, Peru - Summer 2024">
+      <img src="../assets/images/color/IMG_5951.JPG" alt="Medellin, Colombia - Summer 2024">
+      <img src="../assets/images/color/IMG_6050.JPG" alt="Peru - Summer 2024">
+      <img src="../assets/images/color/IMG_6055.JPG" alt="Peru - Summer 2024">
+      <img src="../assets/images/color/IMG_6068.JPG" alt="Medellin, Colombia - Summer 2024">
+      <img src="../assets/images/color/IMG_7836.JPG" alt="Bologna, Italy - Spring 2023">
+      <img src="../assets/images/color/IMG_7847.JPG" alt="Venice, Italy - Winter 2023">
+      <img src="../assets/images/color/IMG_8035.JPG" alt="London, England - Spring 2023">
+      <img src="../assets/images/color/IMG_8064.JPG" alt="Salzburg, Austria - Spring 2023">
+      <img src="../assets/images/color/IMG_8297.JPG" alt="Venice, Italy - Spring 2023">
+      <img src="../assets/images/color/IMG_8147.JPG" alt="Bassano del Grappa, Italy - Winter 2023">
     </section>
   </main>
 
