--- a/pages/color.html
+++ b/pages/color.html
@@ -34,7 +34,7 @@
       <img src="../assets/images/color/IMG_0851.JPG" alt="Agra, India - Spring 2023">
       <img src="../assets/images/color/IMG_0922.JPG" alt="Chicago, Illinois - Summer 2023">
       <img src="../assets/images/color/IMG_0928.JPG" alt="Chicago, Illinois - Summer 2023">
-      <img src="../assets/images/color/IMG_1941.JPG" alt="Mt. Ranier National Park, Washington - Summer 2021">
+      <img src="../assets/images/color/IMG_1941.JPG" alt="Mt. Rainier National Park, Washington - Summer 2021">
       <img src="../assets/images/color/IMG_1945.JPG" alt="Seaside, Oregon - Fall 2023">
       <img src="../assets/images/color/IMG_1953.JPG" alt="Seattle, Washington - Summer 2021">
       <img src="../assets/images/color/IMG_2244.JPG" alt="Seaside, Oregon - Fall 2023">
