--- a/pages/vertical.html
+++ b/pages/vertical.html
@@ -23,34 +23,33 @@
 
   <main>
     <section class="gallery">
-      <img src="../assets/images/vertical/000094770003.jpg" alt="Vertical photo 1" loading="lazy">
-      <img src="../assets/images/vertical/000094770006.jpg" alt="Vertical photo 2" loading="lazy">
-      <img src="../assets/images/vertical/IMG_0529.jpg" alt="Vertical photo 3" loading="lazy">
-      <img src="../assets/images/vertical/IMG_0616.jpg" alt="Vertical photo 4" loading="lazy">
-      <img src="../assets/images/vertical/IMG_0620.jpg" alt="Vertical photo 5" loading="lazy">
-      <img src="../assets/images/vertical/IMG_0622.jpg" alt="Vertical photo 6" loading="lazy">
-      <img src="../assets/images/vertical/IMG_0830.JPG" alt="Vertical photo 7" loading="lazy">
-      <img src="../assets/images/vertical/IMG_1161.JPG" alt="Vertical photo 8" loading="lazy">
-      <img src="../assets/images/vertical/IMG_1172.JPG" alt="Vertical photo 9" loading="lazy">
-      <img src="../assets/images/vertical/IMG_2495.jpg" alt="Vertical photo 10" loading="lazy">
-      <img src="../assets/images/vertical/IMG_2559.JPG" alt="Vertical photo 11" loading="lazy">
-      <img src="../assets/images/vertical/IMG_2575.jpg" alt="Vertical photo 12" loading="lazy">
-      <img src="../assets/images/vertical/IMG_2627.jpg" alt="Vertical photo 13" loading="lazy">
-      <img src="../assets/images/vertical/IMG_2628.jpg" alt="Vertical photo 14" loading="lazy">
-      <img src="../assets/images/vertical/IMG_3579.jpg" alt="Vertical photo 15" loading="lazy">
-      <img src="../assets/images/vertical/IMG_3598.jpg" alt="Vertical photo 16" loading="lazy">
-      <img src="../assets/images/vertical/IMG_3685.jpg" alt="Vertical photo 17" loading="lazy">
-      <img src="../assets/images/vertical/IMG_5758.JPG" alt="Vertical photo 18" loading="lazy">
-      <img src="../assets/images/vertical/IMG_5799.JPG" alt="Vertical photo 19" loading="lazy">
-      <img src="../assets/images/vertical/IMG_5824.JPG" alt="Vertical photo 20" loading="lazy">
-      <img src="../assets/images/vertical/IMG_5966.JPG" alt="Vertical photo 21" loading="lazy">
-      <img src="../assets/images/vertical/IMG_7945 Copy.JPG" alt="Vertical photo 22" loading="lazy">
-      <img src="../assets/images/vertical/IMG_0639.jpg" alt="Vertical photo 23" loading="lazy">
-      <img src="../assets/images/vertical/IMG_7326.JPG" alt="Vertical photo 24" loading="lazy">
-      <img src="../assets/images/vertical/IMG_4703.jpg" alt="Vertical photo 25" loading="lazy">
-      <img src="../assets/images/vertical/IMG_4704.jpg" alt="Vertical photo 26" loading="lazy">
-      <img src="../assets/images/vertical/IMG_4780.jpg" alt="Vertical photo 27" loading="lazy">
-      <img src="../assets/images/vertical/IMG_4802.jpg" alt="Vertical photo 28" loading="lazy">
+      <img src="../assets/images/vertical/000094770003.jpg" alt="Cantebury, England - October 2024" loading="lazy">
+      <img src="../assets/images/vertical/000094770006.jpg" alt="Cantebury, England - October 2024" loading="lazy">
+      <img src="../assets/images/vertical/IMG_0529.jpg" alt="Florence, Italy - Spring 2025" loading="lazy">
+      <img src="../assets/images/vertical/IMG_0616.jpg" alt="Portland, Oregon - Winter 2024" loading="lazy">
+      <img src="../assets/images/vertical/IMG_0620.jpg" alt="Florence, Italy - Spring 2025" loading="lazy">
+      <img src="../assets/images/vertical/IMG_0622.jpg" alt="Florence, Italy - Spring 2025" loading="lazy">
+      <img src="../assets/images/vertical/IMG_0639.jpg" alt="Florence, Italy - Spring 2025" loading="lazy">
+      <img src="../assets/images/vertical/IMG_0830.JPG" alt="Jaipur, India - Summer 2023" loading="lazy">
+      <img src="../assets/images/vertical/IMG_1161.JPG" alt="Victoria, BC - Spring 2025" loading="lazy">
+      <img src="../assets/images/vertical/IMG_1172.JPG" alt="Victoria, BC - Spring 2025" loading="lazy">
+      <img src="../assets/images/vertical/IMG_2495.jpg" alt="The Gorge, Oregon - Summer 2025" loading="lazy">
+      <img src="../assets/images/vertical/IMG_2559.JPG" alt="Pickathon, Oregon - Summer 2025" loading="lazy">
+      <img src="../assets/images/vertical/IMG_2575.jpg" alt="Pickathon, Oregon - Summer 2025" loading="lazy">
+      <img src="../assets/images/vertical/IMG_2627.jpg" alt="Oregon Coast - Summer 2025" loading="lazy">
+      <img src="../assets/images/vertical/IMG_2628.jpg" alt="Oregon Coast - Summer 2025" loading="lazy">
+      <img src="../assets/images/vertical/IMG_3579.jpg" alt="Oregon Coast - Summer 2025" loading="lazy">
+      <img src="../assets/images/vertical/IMG_3598.jpg" alt="West Glacier, Montana - Summer 2025" loading="lazy">
+      <img src="../assets/images/vertical/IMG_3685.jpg" alt="Tulsa, Oklahoma - Winter 2022" loading="lazy">
+      <img src="../assets/images/vertical/IMG_4703.jpg" alt="Tokyo, Japan - Fall 2025" loading="lazy">
+      <img src="../assets/images/vertical/IMG_5824.JPG" alt="Machu Picchu, Peru - Summer 2024" loading="lazy">
+      <img src="../assets/images/vertical/IMG_5966.JPG" alt="Cusco, Peru - Summer 2024" loading="lazy">
+      <img src="../assets/images/vertical/IMG_7945 Copy.JPG" alt="Edinburgh, Scotland - Spring 2023" loading="lazy">
+      <img src="../assets/images/vertical/IMG_7326.JPG" alt="Southern Utah - Summer 2024" loading="lazy">
+      <img src="../assets/images/vertical/IMG_4704.jpg" alt="Tokyo, Japan - Fall 2025" loading="lazy">
+      <img src="../assets/images/vertical/IMG_4780.jpg" alt="Tokyo, Japan - Fall 2025" loading="lazy">
+      <img src="../assets/images/vertical/IMG_4802.jpg" alt="Tokyo, Japan - Fall 2025" loading="lazy">
+      <img src="../assets/images/vertical/IMG_5799.JPG" alt="Cusco, Peru - Summer 2024" loading="lazy">
     </section>
   </main>
 
