--- a/pages/street.html
+++ b/pages/street.html
@@ -23,83 +23,84 @@
 
   <main>
     <section class="gallery">
-      <img src="../assets/images/street/000017060001.jpg" alt="Street photo 1" loading="lazy">
-      <img src="../assets/images/street/000017070023.jpg" alt="Street photo 2" loading="lazy">
-      <img src="../assets/images/street/000017210009.jpg" alt="Street photo 3" loading="lazy">
-      <img src="../assets/images/street/000094770022.jpg" alt="Street photo 4" loading="lazy">
-      <img src="../assets/images/street/000094770035.jpg" alt="Street photo 5" loading="lazy">
-      <img src="../assets/images/street/000094820004.jpg" alt="Street photo 6" loading="lazy">
-      <img src="../assets/images/street/000094820013.jpg" alt="Street photo 7" loading="lazy">
-      <img src="../assets/images/street/000094820034.jpg" alt="Street photo 8" loading="lazy">
-      <img src="../assets/images/street/IMG_0457.JPG" alt="Street photo 9" loading="lazy">
-      <img src="../assets/images/street/IMG_0463.JPG" alt="Street photo 10" loading="lazy">
-      <img src="../assets/images/street/IMG_0491.JPG" alt="Street photo 11" loading="lazy">
-      <img src="../assets/images/street/IMG_0501.JPG" alt="Street photo 12" loading="lazy">
-      <img src="../assets/images/street/IMG_0512.JPG" alt="Street photo 13" loading="lazy">
-      <img src="../assets/images/street/IMG_0544.JPG" alt="Street photo 14" loading="lazy">
-      <img src="../assets/images/street/IMG_0608.JPG" alt="Street photo 15" loading="lazy">
-      <img src="../assets/images/street/IMG_0647.JPG" alt="Street photo 16" loading="lazy">
-      <img src="../assets/images/street/IMG_1163.JPG" alt="Street photo 17" loading="lazy">
-      <img src="../assets/images/street/IMG_1169.JPG" alt="Street photo 18" loading="lazy">
-      <img src="../assets/images/street/IMG_1194.JPG" alt="Street photo 19" loading="lazy">
-      <img src="../assets/images/street/IMG_1219.JPG" alt="Street photo 20" loading="lazy">
-      <img src="../assets/images/street/IMG_1723.JPG" alt="Street photo 21" loading="lazy">
-      <img src="../assets/images/street/IMG_1760.JPG" alt="Street photo 22" loading="lazy">
-      <img src="../assets/images/street/IMG_1762.JPG" alt="Street photo 23" loading="lazy">
-      <img src="../assets/images/street/IMG_2438.JPG" alt="Street photo 24" loading="lazy">
-      <img src="../assets/images/street/IMG_2447.JPG" alt="Street photo 25" loading="lazy">
-      <img src="../assets/images/street/IMG_2465.JPG" alt="Street photo 26" loading="lazy">
-      <img src="../assets/images/street/IMG_2469.jpg" alt="Street photo 27" loading="lazy">
-      <img src="../assets/images/street/IMG_2565.JPG" alt="Street photo 28" loading="lazy">
-      <img src="../assets/images/street/IMG_2571.JPG" alt="Street photo 29" loading="lazy">
-      <img src="../assets/images/street/IMG_2617.JPG" alt="Street photo 30" loading="lazy">
-      <img src="../assets/images/street/IMG_2635.JPG" alt="Street photo 31" loading="lazy">
-      <img src="../assets/images/street/IMG_2642.JPG" alt="Street photo 32" loading="lazy">
-      <img src="../assets/images/street/IMG_2644.JPG" alt="Street photo 33" loading="lazy">
-      <img src="../assets/images/street/IMG_2645.JPG" alt="Street photo 34" loading="lazy">
-      <img src="../assets/images/street/IMG_2650.JPG" alt="Street photo 35" loading="lazy">
-      <img src="../assets/images/street/IMG_2653.JPG" alt="Street photo 36" loading="lazy">
-      <img src="../assets/images/street/IMG_3482.JPG" alt="Street photo 37" loading="lazy">
-      <img src="../assets/images/street/IMG_3527.JPG" alt="Street photo 38" loading="lazy">
-      <img src="../assets/images/street/IMG_3536.JPG" alt="Street photo 39" loading="lazy">
-      <img src="../assets/images/street/IMG_3566.JPG" alt="Street photo 40" loading="lazy">
-      <img src="../assets/images/street/IMG_3572.JPG" alt="Street photo 41" loading="lazy">
-      <img src="../assets/images/street/IMG_3588.JPG" alt="Street photo 42" loading="lazy">
-      <img src="../assets/images/street/IMG_3590.JPG" alt="Street photo 43" loading="lazy">
-      <img src="../assets/images/street/IMG_3609.JPG" alt="Street photo 44" loading="lazy">
-      <img src="../assets/images/street/IMG_3915.JPG" alt="Street photo 45" loading="lazy">
-      <img src="../assets/images/street/IMG_7448.JPG" alt="Street photo 46" loading="lazy">
-      <img src="../assets/images/street/IMG_8654.JPG" alt="Street photo 47" loading="lazy">
-      <img src="../assets/images/street/IMG_9850.JPG" alt="Street photo 48" loading="lazy">
-      <img src="../assets/images/street/IMG_9878.JPG" alt="Street photo 49" loading="lazy">
-      <img src="../assets/images/street/IMG_9886.JPG" alt="Street photo 50" loading="lazy">
-      <img src="../assets/images/street/IMG_9889.JPG" alt="Street photo 51" loading="lazy">
-      <img src="../assets/images/street/IMG_9893.JPG" alt="Street photo 52" loading="lazy">
-      <img src="../assets/images/street/IMG_9908.JPG" alt="Street photo 53" loading="lazy">
-      <img src="../assets/images/street/IMG_7470.JPG" alt="Street photo 54" loading="lazy">      
-      <img src="../assets/images/street/IMG_3958.JPG" alt="Street photo 55" loading="lazy">
-      <img src="../assets/images/street/IMG_3974.JPG" alt="Street photo 56" loading="lazy">
-      <img src="../assets/images/street/IMG_3978.JPG" alt="Street photo 57" loading="lazy">
-      <img src="../assets/images/street/IMG_4510.JPG" alt="Street photo 58" loading="lazy">
-      <img src="../assets/images/street/IMG_4524.JPG" alt="Street photo 59" loading="lazy">
-      <img src="../assets/images/street/IMG_4535.JPG" alt="Street photo 60" loading="lazy">
-      <img src="../assets/images/street/IMG_4539.JPG" alt="Street photo 61" loading="lazy">
-      <img src="../assets/images/street/IMG_4545.JPG" alt="Street photo 62" loading="lazy">
-      <img src="../assets/images/street/IMG_4560.JPG" alt="Street photo 63" loading="lazy">
-      <img src="../assets/images/street/IMG_4563.JPG" alt="Street photo 64" loading="lazy">
-      <img src="../assets/images/street/IMG_4593.JPG" alt="Street photo 65" loading="lazy">
-      <img src="../assets/images/street/IMG_4604.JPG" alt="Street photo 66" loading="lazy">
-      <img src="../assets/images/street/IMG_4612.JPG" alt="Street photo 67" loading="lazy">
-      <img src="../assets/images/street/IMG_4614.JPG" alt="Street photo 68" loading="lazy">
-      <img src="../assets/images/street/IMG_4646.JPG" alt="Street photo 69" loading="lazy">
-      <img src="../assets/images/street/IMG_4660.JPG" alt="Street photo 70" loading="lazy">
-      <img src="../assets/images/street/IMG_4694.JPG" alt="Street photo 71" loading="lazy">
-      <img src="../assets/images/street/IMG_4711.JPG" alt="Street photo 72" loading="lazy">
-      <img src="../assets/images/street/IMG_4713.JPG" alt="Street photo 73" loading="lazy">
-      <img src="../assets/images/street/IMG_4720.JPG" alt="Street photo 74" loading="lazy">
-      <img src="../assets/images/street/IMG_4778.JPG" alt="Street photo 75" loading="lazy">
-      <img src="../assets/images/street/IMG_4814.JPG" alt="Street photo 76" loading="lazy">
-      <img src="../assets/images/street/IMG_4819.JPG" alt="Street photo 77" loading="lazy">
+      <img src="../assets/images/street/000017060001.jpg" alt="Maui, Hawaii - Winter 2025" loading="lazy">
+      <img src="../assets/images/street/000017070023.jpg" alt="Maui, Hawaii - Winter 2025" loading="lazy">
+      <img src="../assets/images/street/000017210009.jpg" alt="Maui, Hawaii - Winter 2025" loading="lazy">
+      <img src="../assets/images/street/000094770022.jpg" alt="Brighton, England - Autumn 2024" loading="lazy">
+      <img src="../assets/images/street/000094770035.jpg" alt="London, England - Autumn 2024" loading="lazy">
+      <img src="../assets/images/street/000094820004.jpg" alt="London, England - Autumn 2024" loading="lazy">
+      <img src="../assets/images/street/000094820013.jpg" alt="Canon Beach, Oregon - Autumn 2024" loading="lazy">
+      <img src="../assets/images/street/000094820034.jpg" alt="New York City - Late Summer 2024" loading="lazy">
+      <img src="../assets/images/street/IMG_0457.JPG" alt="Florence, Italy - Spring 2025" loading="lazy">
+      <img src="../assets/images/street/IMG_0463.JPG" alt="Florence, Italy - Spring 2025" loading="lazy">
+      <img src="../assets/images/street/IMG_0491.JPG" alt="Florence, Italy - Spring 2025" loading="lazy">
+      <img src="../assets/images/street/IMG_0501.JPG" alt="London, England - Spring 2025" loading="lazy">
+      <img src="../assets/images/street/IMG_0512.JPG" alt="Florence, Italy - Spring 2025" loading="lazy">
+      <img src="../assets/images/street/IMG_0544.JPG" alt="Florence, Italy - Spring 2025" loading="lazy">
+      <img src="../assets/images/street/IMG_0608.JPG" alt="Portland, Oregon - Spring 2025" loading="lazy">
+      <img src="../assets/images/street/IMG_0647.JPG" alt="Florence, Italy - Spring 2025" loading="lazy">
+      <img src="../assets/images/street/IMG_1163.JPG" alt="Victoria, BC - Summer 2025" loading="lazy">
+      <img src="../assets/images/street/IMG_1169.JPG" alt="Victoria, BC - Summer 2025" loading="lazy">
+      <img src="../assets/images/street/IMG_1194.JPG" alt="Victoria, BC - Summer 2025" loading="lazy">
+      <img src="../assets/images/street/IMG_1219.JPG" alt="Victoria, BC - Summer 2025" loading="lazy">
+      <img src="../assets/images/street/IMG_1723.JPG" alt="Portland, Oregon - Summer 2025" loading="lazy">
+      <img src="../assets/images/street/IMG_1760.JPG" alt="Portland, Oregon - Summer 2025" loading="lazy">
+      <img src="../assets/images/street/IMG_1762.JPG" alt="Portland, Oregon - Summer 2025" loading="lazy">
+      <img src="../assets/images/street/IMG_2438.JPG" alt="St. Paul, Oregon - Summer 2025" loading="lazy">
+      <img src="../assets/images/street/IMG_2447.JPG" alt="St. Paul, Oregon - Summer 2025" loading="lazy">
+      <img src="../assets/images/street/IMG_2465.JPG" alt="St. Paul, Oregon - Summer 2025" loading="lazy">
+      <img src="../assets/images/street/IMG_2469.jpg" alt="St. Paul, Oregon - Summer 2025" loading="lazy">
+      <img src="../assets/images/street/IMG_2565.JPG" alt="Pickathon, Oregon - Summer 2025" loading="lazy">
+      <img src="../assets/images/street/IMG_2571.JPG" alt="Pickathon, Oregon - Summer 2025" loading="lazy">
+      <img src="../assets/images/street/IMG_2617.JPG" alt="Long Beach, Washington - Summer 2025" loading="lazy">
+      <img src="../assets/images/street/IMG_2635.JPG" alt="Sauvie Island, Oregon - Summer 2025" loading="lazy">
+      <img src="../assets/images/street/IMG_2642.JPG" alt="Corvalis, Oregon - Summer 2025" loading="lazy">
+      <img src="../assets/images/street/IMG_2644.JPG" alt="Sauvie Island, Oregon - Summer 2025" loading="lazy">
+      <img src="../assets/images/street/IMG_2645.JPG" alt="Oregon Coast - Summer 2025" loading="lazy">
+      <img src="../assets/images/street/IMG_2650.JPG" alt="Sauvie Island, Oregon - Summer 2025" loading="lazy">
+      <img src="../assets/images/street/IMG_2653.JPG" alt="Corvalis, Oregon - Summer 2025" loading="lazy">
+      <img src="../assets/images/street/IMG_3482.JPG" alt="Whitefish, Montana - Summer 2025" loading="lazy">
+      <img src="../assets/images/street/IMG_3527.JPG" alt="Portland, Oregon - Summer 2025" loading="lazy">
+      <img src="../assets/images/street/IMG_3529.JPG" alt="Portland, Oregon - Summer 2025" loading="lazy">
+      <img src="../assets/images/street/IMG_3536.JPG" alt="Portland, Oregon - Summer 2025" loading="lazy">
+      <img src="../assets/images/street/IMG_3566.JPG" alt="Portland, Oregon - Summer 2025" loading="lazy">
+      <img src="../assets/images/street/IMG_3572.JPG" alt="Crater Lake, Oregon - Summer 2025" loading="lazy">
+      <img src="../assets/images/street/IMG_3588.JPG" alt="Glacier National Park, Montana - Summer 2025" loading="lazy">
+      <img src="../assets/images/street/IMG_3590.JPG" alt="Montana - Summer 2025" loading="lazy">
+      <img src="../assets/images/street/IMG_3609.JPG" alt="West Glacier, Montana - Summer 2025" loading="lazy">
+      <img src="../assets/images/street/IMG_3915.JPG" alt="Russelville, Arkansas - Spring 2024" loading="lazy">
+      <img src="../assets/images/street/IMG_7448.JPG" alt="Democratic National Convention, Chicago, Illinois - Summer 2024" loading="lazy">
+      <img src="../assets/images/street/IMG_8654.JPG" alt="Seaside, Oregon - Winter 2024" loading="lazy">
+      <img src="../assets/images/street/IMG_9850.JPG" alt="Portland, Oregon - Summer 2025" loading="lazy">
+      <img src="../assets/images/street/IMG_9878.JPG" alt="Portland, Oregon - Summer 2025" loading="lazy">
+      <img src="../assets/images/street/IMG_9886.JPG" alt="Fort Worth, Texas - Winter 2025" loading="lazy">
+      <img src="../assets/images/street/IMG_9889.JPG" alt="Fort Worth, Texas - Winter 2025" loading="lazy">
+      <img src="../assets/images/street/IMG_9893.JPG" alt="Fort Worth, Texas - Winter 2025" loading="lazy">
+      <img src="../assets/images/street/IMG_9908.JPG" alt="Fort Worth, Texas - Winter 2025" loading="lazy">
+      <img src="../assets/images/street/IMG_7470.JPG" alt="Democratic National Convention, Chicago, Illinois - Summer 2024" loading="lazy">      
+      <img src="../assets/images/street/IMG_3958.JPG" alt="Portland, Oregon - Summer 2025" loading="lazy">
+      <img src="../assets/images/street/IMG_3974.JPG" alt="Portland, Oregon - Summer 2025" loading="lazy">
+      <img src="../assets/images/street/IMG_3978.JPG" alt="Portland, Oregon - Summer 2025" loading="lazy">
+      <img src="../assets/images/street/IMG_4510.JPG" alt="Tokyo, Japan - Fall 2025" loading="lazy">
+      <img src="../assets/images/street/IMG_4524.JPG" alt="Kyoto, Japan - Fall 2025" loading="lazy">
+      <img src="../assets/images/street/IMG_4535.JPG" alt="Kyoto, Japan - Fall 2025" loading="lazy">
+      <img src="../assets/images/street/IMG_4539.JPG" alt="Kyoto, Japan - Fall 2025" loading="lazy">
+      <img src="../assets/images/street/IMG_4545.JPG" alt="Kinosaki, Japan - Fall 2025" loading="lazy">
+      <img src="../assets/images/street/IMG_4560.JPG" alt="Kinosaki, Japan - Fall 2025" loading="lazy">
+      <img src="../assets/images/street/IMG_4563.JPG" alt="Kinosaki, Japan - Fall 2025" loading="lazy">
+      <img src="../assets/images/street/IMG_4593.JPG" alt="Nikko, Japan - Fall 2025" loading="lazy">
+      <img src="../assets/images/street/IMG_4604.JPG" alt="Tokyo, Japan - Fall 2025" loading="lazy">
+      <img src="../assets/images/street/IMG_4612.JPG" alt="Kawagoe, Japan - Fall 2025" loading="lazy">
+      <img src="../assets/images/street/IMG_4614.JPG" alt="Nikko, Japan - Fall 2025" loading="lazy">
+      <img src="../assets/images/street/IMG_4646.JPG" alt="Tokyo, Japan - Fall 2025" loading="lazy">
+      <img src="../assets/images/street/IMG_4660.JPG" alt="Tokyo, Japan - Fall 2025" loading="lazy">
+      <img src="../assets/images/street/IMG_4694.JPG" alt="Tokyo, Japan - Fall 2025" loading="lazy">
+      <img src="../assets/images/street/IMG_4711.JPG" alt="Tokyo, Japan - Fall 2025" loading="lazy">
+      <img src="../assets/images/street/IMG_4713.JPG" alt="Tokyo, Japan - Fall 2025" loading="lazy">
+      <img src="../assets/images/street/IMG_4720.JPG" alt="Tokyo, Japan - Fall 2025" loading="lazy">
+      <img src="../assets/images/street/IMG_4778.JPG" alt="Kinosaki, Japan - Fall 2025" loading="lazy">
+      <img src="../assets/images/street/IMG_4814.JPG" alt="Tokyo, Japan - Fall 2025" loading="lazy">
+      <img src="../assets/images/street/IMG_4819.JPG" alt="Kawagoe, Japan - Fall 2025" loading="lazy">
 
     </section>
   </main>
