final caption update

--- a/pages/color.html
+++ b/pages/color.html
@@ -25,7 +25,7 @@
     <section class="gallery">
       <img src="../assets/images/color/3DDEC44C-DD7E-43EC-ABDB-E6C5A45956D7.jpg" alt="Amarillo, Texas - Summer 2024">
       <img src="../assets/images/color/426029F6-4B94-4C9D-BBB5-419367B043D3.jpg" alt="Somewhere in Utah - Summer 2024">
-      <img src="../assets/images/color/000057420015.jpg" alt="North side of Maui, Hawaii - Jan 2025 ">
+      <img src="../assets/images/color/000057420015.jpg" alt="North side of Maui, Hawaii - Winter 2025 ">
       <img src="../assets/images/color/IMG_0716.JPG" alt="Clatskanie, Oregon - Summer 2023">
       <img src="../assets/images/color/IMG_0745.JPG" alt="Clatskanie, Oregon - Summer 2023">
       <img src="../assets/images/color/IMG_0784.JPG" alt="Jaipur, India - Spring 2023">
@@ -35,11 +35,11 @@
       <img src="../assets/images/color/IMG_0922.JPG" alt="Chicago, Illinois - Summer 2023">
       <img src="../assets/images/color/IMG_0928.JPG" alt="Chicago, Illinois - Summer 2023">
       <img src="../assets/images/color/IMG_1941.JPG" alt="Mt. Rainier National Park, Washington - Summer 2021">
-      <img src="../assets/images/color/IMG_1945.JPG" alt="Seaside, Oregon - Fall 2023">
+      <img src="../assets/images/color/IMG_1945.JPG" alt="Seaside, Oregon - Autumn 2023">
       <img src="../assets/images/color/IMG_1953.JPG" alt="Seattle, Washington - Summer 2021">
-      <img src="../assets/images/color/IMG_2244.JPG" alt="Seaside, Oregon - Fall 2023">
+      <img src="../assets/images/color/IMG_2244.JPG" alt="Seaside, Oregon - Autumn 2023">
       <img src="../assets/images/color/IMG_2251.JPG" alt="Portland, Oregon - Summer 2025">
-      <img src="../assets/images/color/IMG_2252.JPG" alt="Boxley Valley, Arkansas - Fall 2023">
+      <img src="../assets/images/color/IMG_2252.JPG" alt="Boxley Valley, Arkansas - Autumn 2023">
       <img src="../assets/images/color/IMG_2363.JPG" alt="China Town, San Francisco, California - Summer 2021">
       <img src="../assets/images/color/IMG_4135.JPG" alt="Portland, Maine - Spring - 2022">
       <img src="../assets/images/color/IMG_5762.JPG" alt="Rio de Janeiro, Brazil - Summer 2024">
