--- a/pages/street.html
+++ b/pages/street.html
@@ -65,7 +65,6 @@
       <img src="../assets/images/street/IMG_3536.JPG" alt="Portland, Oregon - Summer 2025" loading="lazy">
       <img src="../assets/images/street/IMG_3566.JPG" alt="Portland, Oregon - Summer 2025" loading="lazy">
       <img src="../assets/images/street/IMG_3572.JPG" alt="Crater Lake, Oregon - Summer 2025" loading="lazy">
-      <img src="../assets/images/street/IMG_3588.JPG" alt="Glacier National Park, Montana - Summer 2025" loading="lazy">
       <img src="../assets/images/street/IMG_3590.JPG" alt="Montana - Summer 2025" loading="lazy">
       <img src="../assets/images/street/IMG_3609.JPG" alt="West Glacier, Montana - Summer 2025" loading="lazy">
       <img src="../assets/images/street/IMG_3915.JPG" alt="Russelville, Arkansas - Spring 2024" loading="lazy">
@@ -81,26 +80,26 @@
       <img src="../assets/images/street/IMG_3958.JPG" alt="Portland, Oregon - Summer 2025" loading="lazy">
       <img src="../assets/images/street/IMG_3974.JPG" alt="Portland, Oregon - Summer 2025" loading="lazy">
       <img src="../assets/images/street/IMG_3978.JPG" alt="Portland, Oregon - Summer 2025" loading="lazy">
-      <img src="../assets/images/street/IMG_4510.JPG" alt="Tokyo, Japan - Fall 2025" loading="lazy">
-      <img src="../assets/images/street/IMG_4524.JPG" alt="Kyoto, Japan - Fall 2025" loading="lazy">
-      <img src="../assets/images/street/IMG_4535.JPG" alt="Kyoto, Japan - Fall 2025" loading="lazy">
-      <img src="../assets/images/street/IMG_4539.JPG" alt="Kyoto, Japan - Fall 2025" loading="lazy">
-      <img src="../assets/images/street/IMG_4545.JPG" alt="Kinosaki, Japan - Fall 2025" loading="lazy">
-      <img src="../assets/images/street/IMG_4560.JPG" alt="Kinosaki, Japan - Fall 2025" loading="lazy">
-      <img src="../assets/images/street/IMG_4563.JPG" alt="Kinosaki, Japan - Fall 2025" loading="lazy">
-      <img src="../assets/images/street/IMG_4593.JPG" alt="Nikko, Japan - Fall 2025" loading="lazy">
-      <img src="../assets/images/street/IMG_4604.JPG" alt="Tokyo, Japan - Fall 2025" loading="lazy">
-      <img src="../assets/images/street/IMG_4612.JPG" alt="Kawagoe, Japan - Fall 2025" loading="lazy">
-      <img src="../assets/images/street/IMG_4614.JPG" alt="Nikko, Japan - Fall 2025" loading="lazy">
-      <img src="../assets/images/street/IMG_4646.JPG" alt="Tokyo, Japan - Fall 2025" loading="lazy">
-      <img src="../assets/images/street/IMG_4660.JPG" alt="Tokyo, Japan - Fall 2025" loading="lazy">
-      <img src="../assets/images/street/IMG_4694.JPG" alt="Tokyo, Japan - Fall 2025" loading="lazy">
-      <img src="../assets/images/street/IMG_4711.JPG" alt="Tokyo, Japan - Fall 2025" loading="lazy">
-      <img src="../assets/images/street/IMG_4713.JPG" alt="Tokyo, Japan - Fall 2025" loading="lazy">
-      <img src="../assets/images/street/IMG_4720.JPG" alt="Tokyo, Japan - Fall 2025" loading="lazy">
-      <img src="../assets/images/street/IMG_4778.JPG" alt="Kinosaki, Japan - Fall 2025" loading="lazy">
-      <img src="../assets/images/street/IMG_4814.JPG" alt="Tokyo, Japan - Fall 2025" loading="lazy">
-      <img src="../assets/images/street/IMG_4819.JPG" alt="Kawagoe, Japan - Fall 2025" loading="lazy">
+      <img src="../assets/images/street/IMG_4510.JPG" alt="Tokyo, Japan - Autumn 2025" loading="lazy">
+      <img src="../assets/images/street/IMG_4524.JPG" alt="Kyoto, Japan - Autumn 2025" loading="lazy">
+      <img src="../assets/images/street/IMG_4535.JPG" alt="Kyoto, Japan - Autumn 2025" loading="lazy">
+      <img src="../assets/images/street/IMG_4539.JPG" alt="Kyoto, Japan - Autumn 2025" loading="lazy">
+      <img src="../assets/images/street/IMG_4545.JPG" alt="Kinosaki, Japan - Autumn 2025" loading="lazy">
+      <img src="../assets/images/street/IMG_4560.JPG" alt="Kinosaki, Japan - Autumn 2025" loading="lazy">
+      <img src="../assets/images/street/IMG_4563.JPG" alt="Kinosaki, Japan - Autumn 2025" loading="lazy">
+      <img src="../assets/images/street/IMG_4593.JPG" alt="Nikko, Japan - Autumn 2025" loading="lazy">
+      <img src="../assets/images/street/IMG_4604.JPG" alt="Tokyo, Japan - Autumn 2025" loading="lazy">
+      <img src="../assets/images/street/IMG_4612.JPG" alt="Kawagoe, Japan - Autumn 2025" loading="lazy">
+      <img src="../assets/images/street/IMG_4614.JPG" alt="Nikko, Japan - Autumn 2025" loading="lazy">
+      <img src="../assets/images/street/IMG_4646.JPG" alt="Tokyo, Japan - Autumn 2025" loading="lazy">
+      <img src="../assets/images/street/IMG_4660.JPG" alt="Tokyo, Japan - Autumn 2025" loading="lazy">
+      <img src="../assets/images/street/IMG_4694.JPG" alt="Tokyo, Japan - Autumn 2025" loading="lazy">
+      <img src="../assets/images/street/IMG_4711.JPG" alt="Tokyo, Japan - Autumn 2025" loading="lazy">
+      <img src="../assets/images/street/IMG_4713.JPG" alt="Tokyo, Japan - Autumn 2025" loading="lazy">
+      <img src="../assets/images/street/IMG_4720.JPG" alt="Tokyo, Japan - Autumn 2025" loading="lazy">
+      <img src="../assets/images/street/IMG_4778.JPG" alt="Kinosaki, Japan - Autumn 2025" loading="lazy">
+      <img src="../assets/images/street/IMG_4814.JPG" alt="Tokyo, Japan - Autumn 2025" loading="lazy">
+      <img src="../assets/images/street/IMG_4819.JPG" alt="Kawagoe, Japan - Autumn 2025" loading="lazy">
 
     </section>
   </main>
