--- a/pages/vertical.html
+++ b/pages/vertical.html
@@ -23,8 +23,8 @@
 
   <main>
     <section class="gallery">
-      <img src="../assets/images/vertical/000094770003.jpg" alt="Cantebury, England - October 2024" loading="lazy">
-      <img src="../assets/images/vertical/000094770006.jpg" alt="Cantebury, England - October 2024" loading="lazy">
+      <img src="../assets/images/vertical/000094770003.jpg" alt="Cantebury, England - Autumn 2024" loading="lazy">
+      <img src="../assets/images/vertical/000094770006.jpg" alt="Cantebury, England - Autumn 2024" loading="lazy">
       <img src="../assets/images/vertical/IMG_0529.jpg" alt="Florence, Italy - Spring 2025" loading="lazy">
       <img src="../assets/images/vertical/IMG_0616.jpg" alt="Portland, Oregon - Winter 2024" loading="lazy">
       <img src="../assets/images/vertical/IMG_0620.jpg" alt="Florence, Italy - Spring 2025" loading="lazy">
@@ -41,14 +41,14 @@
       <img src="../assets/images/vertical/IMG_3579.jpg" alt="Oregon Coast - Summer 2025" loading="lazy">
       <img src="../assets/images/vertical/IMG_3598.jpg" alt="West Glacier, Montana - Summer 2025" loading="lazy">
       <img src="../assets/images/vertical/IMG_3685.jpg" alt="Tulsa, Oklahoma - Winter 2022" loading="lazy">
-      <img src="../assets/images/vertical/IMG_4703.jpg" alt="Tokyo, Japan - Fall 2025" loading="lazy">
+      <img src="../assets/images/vertical/IMG_4703.jpg" alt="Tokyo, Japan - Autumn 2025" loading="lazy">
       <img src="../assets/images/vertical/IMG_5824.JPG" alt="Machu Picchu, Peru - Summer 2024" loading="lazy">
       <img src="../assets/images/vertical/IMG_5966.JPG" alt="Cusco, Peru - Summer 2024" loading="lazy">
       <img src="../assets/images/vertical/IMG_7945 Copy.JPG" alt="Edinburgh, Scotland - Spring 2023" loading="lazy">
       <img src="../assets/images/vertical/IMG_7326.JPG" alt="Southern Utah - Summer 2024" loading="lazy">
-      <img src="../assets/images/vertical/IMG_4704.jpg" alt="Tokyo, Japan - Fall 2025" loading="lazy">
-      <img src="../assets/images/vertical/IMG_4780.jpg" alt="Tokyo, Japan - Fall 2025" loading="lazy">
-      <img src="../assets/images/vertical/IMG_4802.jpg" alt="Tokyo, Japan - Fall 2025" loading="lazy">
+      <img src="../assets/images/vertical/IMG_4704.jpg" alt="Tokyo, Japan - Autumn 2025" loading="lazy">
+      <img src="../assets/images/vertical/IMG_4780.jpg" alt="Tokyo, Japan - Autumn 2025" loading="lazy">
+      <img src="../assets/images/vertical/IMG_4802.jpg" alt="Tokyo, Japan - Autumn 2025" loading="lazy">
       <img src="../assets/images/vertical/IMG_5799.JPG" alt="Cusco, Peru - Summer 2024" loading="lazy">
     </section>
   </main>
