--- a/pages/street.html
+++ b/pages/street.html
@@ -97,7 +97,7 @@
       <img src="../assets/images/street/IMG_4711.JPG" alt="Tokyo, Japan - Autumn 2025" loading="lazy">
       <img src="../assets/images/street/IMG_4713.JPG" alt="Tokyo, Japan - Autumn 2025" loading="lazy">
       <img src="../assets/images/street/IMG_4720.JPG" alt="Tokyo, Japan - Autumn 2025" loading="lazy">
-      <img src="../assets/images/street/IMG_4778.JPG" alt="Kinosaki, Japan - Autumn 2025" loading="lazy">
+      <img src="../assets/images/street/IMG_4778.JPG" alt="&quot;Min danske ven&quot; Kyoto, Japan - efterår 2025" loading="lazy">
       <img src="../assets/images/street/IMG_4814.JPG" alt="Tokyo, Japan - Autumn 2025" loading="lazy">
       <img src="../assets/images/street/IMG_4819.JPG" alt="Kawagoe, Japan - Autumn 2025" loading="lazy">
 
